manual ship placing